completed report generator. tests for reader and command parser components

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,2 @@
 [pytest]
-addopts = -q --cov=developer_efficiency_analysis_cli --cov-report=term-missing
-testpaths = tests
-pythonpath = src
+python_files = tests.py test_*.py *_tests.py
